--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
@@ -10,6 +10,7 @@
 		<![CDATA[
 			import mx.events.ListEvent;
 			
+			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.modules.scripts.events.GlobalScriptsPanelEvent;
 			[Bindable]
 			private var _actions : XMLList;
@@ -44,7 +45,7 @@
 	</fx:Script>
 	<s:Rect width="100%" height="100%">
 		<s:fill>
-			<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
 	
