--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -11,6 +11,7 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.model._vo.LibraryVO;
+			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.modules.scripts.events.LibrariesPanelEvent;
 			import net.vdombox.ide.modules.scripts.events.ListItemRendererEvent;
 			
@@ -121,7 +122,7 @@
 	
 	<s:Rect width="100%" height="100%">
 		<s:fill>
-			<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
 
