Move some images to ide_lib
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7822 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
@@ -11,6 +11,8 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.view.components.VDOMImage;
+			
 			[Embed( source = "assets/Warning.png" )]
 			public var wanted : Class;
 			
@@ -82,7 +84,7 @@
 				
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source="@Embed('assets/texture_ide_sidebar.png')" />
+					<s:BitmapFill source="{VDOMImage.Fon_Texture}" />
 				</s:fill>
 			</s:Rect>
 				
