--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
@@ -10,6 +10,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.core.view.components.GalleryItemRenderer;
 			
 			protected function iconsList_creationCompleteHandler(event:FlexEvent):void
@@ -84,7 +85,7 @@
 		<s:Group width="100%" height="50" >
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source = "@Embed('/assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+					<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 				</s:fill>
 			</s:Rect>
 			<s:Rect width="100%" height="10">
