--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -15,6 +15,7 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.model._vo.TypeVO;
+			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 
 			[Bindable]
@@ -57,7 +58,7 @@
 	<s:Group width="100%" height="100%">
 		<s:Rect width="100%" height="100%">
 			<s:fill>
-				<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+				<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
 		
