--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -9,6 +9,14 @@
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.wysiwyg.view.components.windows.ColorPickerWindow")]
 	</fx:Metadata>
+	<fx:Script>
+		<![CDATA[
+			
+			import net.vdombox.ide.common.view.components.VDOMImage;
+			
+			
+		]]>
+	</fx:Script>
 	
 	<!-- states -->
 	<s:states>
@@ -168,7 +176,7 @@
 		<s:Group width="100%" height="100%">
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+					<s:BitmapFill source="{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 				</s:fill>
 			</s:Rect>
 		
