--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -14,6 +14,7 @@
 	</fx:Metadata>
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.modules.wysiwyg.events.AttributeEvent;
 		]]>
 	</fx:Script>
@@ -70,7 +71,7 @@
 		
 		<s:Rect width="100%" height="100%">
 			<s:fill>
-				<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+				<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
 		
