git-svn-id: http://svn.vdombox.ru/flextools/trunk@7825 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -31,8 +31,8 @@
 			protected function objectsTree_creationCompleteHandler(event:FlexEvent):void
 			{
 				// TODO Auto-generated method stub
-				objectsTree.setStyle("disclosureOpenIcon", VDOMImage.Closed_Tree_Icon);
-				objectsTree.setStyle("disclosureClosedIcon", VDOMImage.Opened_Tree_Icon);
+				objectsTree.setStyle("disclosureOpenIcon", VDOMImage.Opened_Tree_Icon);
+				objectsTree.setStyle("disclosureClosedIcon", VDOMImage.Closed_Tree_Icon);
 			}
 			
 			public function get selectedObject() : XML
