git-svn-id: http://svn.vdombox.ru/flextools/trunk@7828 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -228,8 +228,8 @@
 				objectsTree.addEventListener( ListEvent.ITEM_ROLL_OVER, objectsTree_highlightChangeHandler, false, 0, true );
 				objectsTree.addEventListener( ListEvent.ITEM_ROLL_OUT, objectsTree_highlightChangeHandler, false, 0, true );
 
-				objectsTree.setStyle("disclosureOpenIcon", VDOMImage.Closed_Tree_Icon);
-				objectsTree.setStyle("disclosureClosedIcon", VDOMImage.Opened_Tree_Icon);
+				objectsTree.setStyle("disclosureOpenIcon", VDOMImage.Opened_Tree_Icon);
+				objectsTree.setStyle("disclosureClosedIcon", VDOMImage.Closed_Tree_Icon);
 				
 				tbFill.height = 30;
 				//objectsTree.addEventListener( MouseEvent.MIDDLE_MOUSE_UP, objectsTree_mouseHandler, false, 0, true );
