git-svn-id: http://svn.vdombox.ru/flextools/trunk@7831 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
@@ -103,6 +103,9 @@
 			{
 				attributeName = "value";
 				
+				if ( attributesObject[ attributeName ].value == elementForEditing.text )
+					return;
+				
 				dispatchEvent( new Event( Event.CHANGE ) );
 				
 				dispatchEvent( event );
@@ -172,11 +175,16 @@
 
 				enabled = false;
 				isInited = false;
-				attributesObject[ "value" ].value = elementForEditing.text;
 				
 				attributeName = "value";
+				if ( attributesObject[ attributeName ].value != elementForEditing.text )
+				{
+					attributesObject[ "value" ].value = elementForEditing.text;
 				
-				dispatchEvent( new Event( Event.CHANGE ) );
+					
+				
+					dispatchEvent( new Event( Event.CHANGE ) );
+				}
 
 				var attributeValue : String;
 
