--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
@@ -178,9 +178,13 @@
 				if ( tinyMCE && activeEditor)
 				{
 					value = activeEditor.getContent();
-					attributesObject[ "value" ].value = value;
 					
-					dispatchEvent( new Event( Event.CHANGE ) );
+					if ( attributesObject[ "value" ].value != value )
+					{
+						attributesObject[ "value" ].value = value;
+					
+						dispatchEvent( new Event( Event.CHANGE ) );
+					}
 				}
 				
 				return value;
