--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -3,7 +3,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/mx" 
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 
-			 height="600" width="800">
+			 height="600" width="800" creationComplete="sparkskin1_creationCompleteHandler(event)">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.MainWindow")]
@@ -12,6 +12,7 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
+			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.model._vo.ResourceVO;
 			import net.vdombox.ide.core.events.MainWindowEvent;
@@ -23,6 +24,34 @@
 				return exclusions;
 			}
 			
+			
+			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
+			{
+				gotoLastPosition();
+				
+			}
+			
+			private function gotoLastPosition():void
+			{
+				var f:File = File.applicationStorageDirectory.resolvePath("appPosition.xml");   
+				if(f.exists)
+				{
+					var s:FileStream = new FileStream();
+					s.open(f,flash.filesystem.FileMode.READ);
+					var xml:XML = XML(s.readUTFBytes(s.bytesAvailable));
+					
+					hostComponent.nativeWindow.x = xml.@x;
+					hostComponent.nativeWindow.y = xml.@y;
+					hostComponent.width = xml.@width;
+					hostComponent.height = xml.@height;
+				}
+				
+				if ( hostComponent.width < 800 )
+					hostComponent.width = 800;
+				
+				if ( hostComponent.height < 600 )
+					hostComponent.height = 600;
+			}
 			
 		]]>
 	</fx:Script>
