--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/LevelsFilterPanel.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/LevelsFilterPanel.mxml
@@ -11,10 +11,11 @@
 			import mx.collections.ArrayList;
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			import net.vdombox.ide.modules.tree.events.LevelsFilterPanelEvent;
 			import net.vdombox.ide.modules.tree.model.vo.TreeElementVO;
 			import net.vdombox.ide.modules.tree.model.vo.TreeLevelVO;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			
 			import spark.events.IndexChangeEvent;
 
@@ -98,12 +99,16 @@
 			
 		]]>
 	</fx:Script>
-
-	<s:Rect height="25" width="100%">
-
+	
+	<s:Rect width="100%" height="100%">
 		<s:fill>
+			<s:BitmapFill source="{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat" />
+		</s:fill>
+	</s:Rect>
 
-			<s:SolidColor color="0x999999"/>
+	<s:Rect width="100%" height="25">
+		<s:fill>
+			<s:SolidColor id="rectColor" color="#3A3A3A" />
 		</s:fill>
 	</s:Rect>
 
@@ -123,19 +128,27 @@
 			</s:fill>
 		</s:Rect>
 
-		<s:Label text="{ selectAll ? resourceManager.getString( 'Tree_General', 'level_show_all' ) : resourceManager.getString( 'Tree_General', 'level_hide_all' ) }" width="100%"/>
+		<s:Label text="{ selectAll ? resourceManager.getString( 'Tree_General', 'level_show_all' ) : resourceManager.getString( 'Tree_General', 'level_hide_all' ) }" 
+				 width="100%" color="#FFFFFF"/>
 	</s:HGroup>
 
-	<s:Line width="100%">
-
+	<s:Line top="-2" left="-2" width="100%">
 		<s:stroke>
-
-			<s:SolidColorStroke color="gray"/>
+			<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1" />
 		</s:stroke>
 	</s:Line>
-
+	
+	<s:Line top="27" left="-2" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1" />
+		</s:stroke>
+	</s:Line>
+	
+		
 	<s:List id="structureLevelsList"
 			dataProvider="{ levels }" height="100%" width="100%" y="25" change="changeHandler( event )"
 			borderVisible="false" itemRenderer="{ new ClassFactory( StructureLevelItemRenderer ) }" selectedItem="@{ _currentStructuretLevel }"
-			creationComplete="structureLevelsList_creationCompleteHandler(event)"/>
+			creationComplete="structureLevelsList_creationCompleteHandler(event)" contentBackgroundAlpha="0" />
+
+	
 </s:Panel>
