--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/StructureLevelItemRenderer.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/StructureLevelItemRenderer.mxml
@@ -17,12 +17,13 @@
 		<s:State name="selected" />
 	</s:states>
 	
-	<s:Rect bottom="0" left="0" right="0" top="0">
-
+	<s:Rect left="-2" width="100%" top="-2" bottom="-2">
 		<s:fill>
-
-			<s:SolidColor color="0x999999"
-						  alpha="0" alpha.hovered="0.2" alpha.selected="0.6" />
+			<s:SolidColor id="rectColor"
+						  color.normal="#3A3A3A"
+						  color.hovered="#00000A"
+						  alpha.hovered="0.8"
+						  color.selected="#00000A" />
 		</s:fill>
 	</s:Rect>
 
@@ -43,15 +44,18 @@
 			</s:fill>
 		</s:Rect>
 
-		<s:Label text="{ data.label }" width="100%" />
+		<s:Label text="{ data.label }" width="100%" color="#FFFFFF"/>
 	</s:HGroup>
 
-	<s:Line width="100%"
-			bottom="0">
-
+	<s:Line top="-2" left="-2" width="100%">
 		<s:stroke>
-
-			<s:SolidColorStroke color="gray" />
+			<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1" />
+		</s:stroke>
+	</s:Line>
+	
+	<s:Line bottom="-2" left="-2" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1" />
 		</s:stroke>
 	</s:Line>
 </s:ItemRenderer>
