--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
@@ -14,6 +14,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			import net.vdombox.ide.modules.dataBase.events.TableElementEvent;
 			
@@ -134,9 +135,10 @@
 			
 			<s:Rect  top="0" left="0" right="0" height="6">
 				<s:fill>
-					<s:BitmapFill source = "@Embed('assets/shadowtable.png')" smooth="true" fillMode="repeat"/>
+					<s:BitmapFill source = "{VDOMImage.ShadowLineWhite}" smooth="true" fillMode="repeat"/>
 				</s:fill>
 			</s:Rect>
+			
 		</s:Group>
 		
 		
