--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -18,10 +18,13 @@
 			import mx.resources.ResourceManager;
 			import mx.utils.ObjectProxy;
 			
+			import net.vdombox.ide.common.events.PopUpWindowEvent;
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.components.windows.NameObjectWindow;
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			import net.vdombox.ide.modules.events.events.EventsPanelEvent;
+			import net.vdombox.utils.WindowManager;
 			
 			import spark.skins.spark.DefaultItemRenderer;
 
