--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/StringAttributeEditWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/StringAttributeEditWindowSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx">
+		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.common.view.components.windows.StringAttributeEditWindow")]
@@ -13,9 +13,28 @@
 		<s:State name="normalAndInactive" />
 		<s:State name="disabled" />
 		<s:State name="normal" />
+		<fx:Script>
+			<![CDATA[
+				import net.vdombox.ide.common.view.components.VDOMImage;
+			]]>
+		</fx:Script>
 	</s:states>
 	
-	<s:VGroup width="100%" height="100%">
+	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
+		<s:fill>
+			<s:SolidColor color="#424242"/>
+		</s:fill>
+	</s:Rect>
+	
+	<s:VGroup width="100%" height="100%"
+			  top="9" bottom="9" left="9" right="9"
+			  gap="0">
+		
+		<s:Group width="100%" height="42">
+			<s:TitleBar id="titleBar"
+						minHeight="32" width="100%"
+						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
+		</s:Group>	
 		
 		<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
 			<s:RichEditableText id="textAreaContainer" 
@@ -28,13 +47,25 @@
 								backgroundColor="#FFFFFF" bottom="65" fontFamily="Courier New" fontSize="12" left="5" right="5" top="5"/>
 		</s:Scroller>
 		
-		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="right" paddingRight="10">
+		<s:Group width="100%" height="45">
 			
-			<s:Button id="ok" label="Ok" click="{hostComponent.ok_close_window()}"/>
+			<s:Rect width="100%" height="100%">
+				<s:fill>
+					<s:BitmapFill source="{VDOMImage.Fon_Texture}" />
+				</s:fill>
+			</s:Rect>
 			
-			<s:Button id="cancel" label="Cancel" click="{hostComponent.no_close_window()}"/>
+			<s:HGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="right" paddingRight="10">
+				
+				<button:VDOMButton id="ok" label="Ok" click="{hostComponent.ok_close_window()}"/>
+				
+				<button:VDOMButton id="cancel" label="Cancel" click="{hostComponent.no_close_window()}"/>
+				
+			</s:HGroup>
 			
-		</s:HGroup>
+		</s:Group>
+		
+		
 		
 	</s:VGroup>
 	
